--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Mencoba Git Remote</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cum laborum consectetur dolorem officia atque.</p>
 </body>
 </html>
